# proof-of-duel

./: .gitignore  README.md
proof-of-duel-frontend/: next.config.ts  package-lock.json  package.json
proof-of-duel-frontend/src/: middleware.ts
proof-of-duel-frontend/src/app/: AuthHandler.tsx  globals.css  layout.tsx  page.tsx  providers.tsx  titleBar.tsx  wallet.tsx
proof-of-duel-frontend/src/app/anchor/: anchor.ts  anchorServer.ts  idl.json  idlType.ts
proof-of-duel-frontend/src/app/api/duel-info/: route.ts
proof-of-duel-frontend/src/app/api/duel-loss/: route.ts
proof-of-duel-game/: Cargo.toml
proof-of-duel-game/assets/sprites/: Heart.aseprite  Key.aseprite  Player1.aseprite  Player2.aseprite
proof-of-duel-game/src/: civic_auth.rs  connection.rs  lib.rs  main.rs  stats.rs
proof-of-duel-game/src/cameras/: mod.rs
proof-of-duel-game/src/player/: mod.rs
proof-of-duel-game/src/scene/: mod.rs
proof-of-duel-game/src/shooting/: keycode.rs  mod.rs
proof-of-duel-game/src/sounds/: gun_shot.rs  mod.rs  music.rs
proof-of-duel-game/src/ui/: game_over.rs  join_game.rs  main_menu.rs  mod.rs  play_now_ui.rs  profile.rs
proof-of-duel-program/: Anchor.toml  package-lock.json  package.json
proof-of-duel-program/programs/proof-of-duel-program/: Cargo.toml
proof-of-duel-program/programs/proof-of-duel-program/src/: lib.rs
proof-of-duel-program/programs/proof-of-duel-program/src/instructions/: initialize_player.rs  loss_increment.rs  mod.rs  win_increment.rs
proof-of-duel-program/programs/proof-of-duel-program/src/states/: player.rs
proof-of-duel-program/tests/: proof-of-duel-program.ts
(+2 files in other folders)
