[package]
name = "proof-of-duel-game"
version = "0.1.0"
edition = "2024"
authors = ["Ruangyot Nanchaing"]
license = "Apache-2.0"

[dependencies]
bevy = "0.16"
bevy_aseprite_ultra = "0.6.1"
bevy-fps-counter = "0.7.0"
rand = "0.9.1"
bevy_quinnet = "0.17.0"
serde = "1.0.219"
serde_json = "1.0.141"

[[bin]]
path = "./bin/client.rs"
name = "client"

[[bin]]
path = "./bin/server.rs"
name = "server"
