[package]
name = "proof-of-duel-game"
version = "0.1.0"
edition = "2024"
authors = ["Ruangyot Nanchaing"]
license = "Apache-2.0"

[dependencies]
bevy = "0.16"
bevy_aseprite_ultra = "0.6.1"
bevy-fps-counter = "0.7.0"
rand = "0.9.1"
bevy_quinnet = "0.17.0"
serde = "1.0.219"
serde_json = "1.0.141"
uuid = { version = "1.17.0", features = ["v4", "fast-rng", "serde", "js"] }
arboard = "3.6.0"
webbrowser = "1.0.5"
dotenvy = "0.15.7"
bevy_webserver = "0.2.1"
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["cors"]}

[[bin]]
path = "./bin/proof_of_duel.rs"
name = "proof_of_duel"

[[bin]]
path = "./bin/server.rs"
name = "server"
